# routes/products.ts
@@ -6,9 +6,11 @@ export function registerPublicProductRoutes() {
   router.group(() => {
     router.get('/products', '#controllers/products_controller.index')
     router.get('/products/featured', '#controllers/products_controller.featured')
+    router.get('/products/filters', '#controllers/products_controller.getFilters')
+    router.get('/products/filters/:key/values', '#controllers/products_controller.getFilterValues')
+    router.get('/products/category/:slug', '#controllers/products_controller.getByCategory')
+    router.get('/products/brand/:id', '#controllers/products_controller.getByBrand')
     router.get('/products/:slug', '#controllers/products_controller.show')
-    router.get('/products/category/:categoryId', '#controllers/products_controller.byCategory')
-    router.get('/products/brand/:brandId', '#controllers/products_controller.byBrand')
   })
 }
 
